** Fixed overflow issue on Illusion chat message body

--- a/webapp/src/main/webapp/resources/novus/scss/illusion-group.scss
+++ b/webapp/src/main/webapp/resources/novus/scss/illusion-group.scss
@@ -160,6 +160,7 @@ h3 {
   color: $default-color;
   font-family: $default-font;
   font-size: 14px;
+  width: 848px;
 }
 
 .illusion-group-chat-fudge-minus,
